# cli-vizua

./: .gitignore  README.md  pyproject.toml
src/vizua/: main.py
src/vizua.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/vizua/cli/: app.py
src/vizua/cli/commands/: describe.py  hello.py  recommend.py  version.py  visualize.py  vizualize.py
src/vizua/infrastructure/readers/: csv_reader.py
src/vizua/services/profiling/: advanced_profiler.py  dataset_profiler.py  profile_diagnostics.py
src/vizua/services/vizualization/: chart_pair_generator.py  chart_ranker.py  chart_render.py  chart_selector.py
