[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vizua"
version = "0.1.0"
description = "CLI tool for data profiling and visualization recommendations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "pandas>=3.0.2",
    "plotly>=6.7.0"
]

[project.scripts]
vizua = "vizua.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]